# ANESPy

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  testing.ipynb
.github/workflows/: python-package.yml
anespy/core/: anes.py  constants.py  loaders.py
anespy/data/: 2000_labels_values.csv  2016_labels_values.csv
anespy/data/var_lists/: 2008_varlist.csv  2020_varlist.csv  cumulative_varlist.csv
core/: anespy.py  constants.py
data/: 2004_labels_values.csv  2012_labels_values.csv
docs/: Makefile  conf.py  example.ipynb  make.bat  vignettes.ipynb
src/: anespy.py
src/anespy/: anespy.py
src/anespy/data/: __init__.py  anes_timeseries_2004.csv
src/anespy/var_lists/: 2000_varlist.csv  2004_varlist.csv  2008_varlist.csv  2012_varlist.csv
src/data/: 2008_labels_values.csv
src/var_lists/: 2004_varlist.csv  2016_varlist.csv
tests/: anes_test.py  loaders_test.py  test_anespy.py
