[tool.poetry]
name = "anespy"
version = "0.1.0"
description = "Easy retrieval of ANES Time Series Data."
authors = ["Jackson Earl Rudoff <62763243+jer164@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"
pandas = "^2.2.2"
polars = "^1.3.0"
requests = "^2.32.3"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
